add Dialogs add Activitys in BaseViewModel

--- a/WpfCoreMvvm/App.xaml
+++ b/WpfCoreMvvm/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:WpfCoreMvvm"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="View/Dialogs/DialogResources.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
