--- a/WpfCoreMvvm/View/MainView.xaml
+++ b/WpfCoreMvvm/View/MainView.xaml
@@ -72,6 +72,25 @@
                       ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ItemsControl ItemsSource="{Binding ItemsSource}"/>
         </ScrollViewer>
+
+
+        <Grid>
+            <Grid Background="Yellow" Opacity="0.3">
+                <Grid.Style>
+                    <Style TargetType="{x:Type Grid}">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Activitys.WaitUi.IsWaiting, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Value="True">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Grid.Style>
+            </Grid>
+            <Label Content="Waiting..."
+                       VerticalAlignment="Center" 
+                       HorizontalAlignment="Center"/>
+        </Grid>
         
     </Grid>
 </UserControl>
