--- a/WpfCoreMvvm/MainWindow.xaml
+++ b/WpfCoreMvvm/MainWindow.xaml
@@ -7,13 +7,33 @@
         xmlns:view="clr-namespace:WpfCoreMvvm.View"
         xmlns:viewModel="clr-namespace:WpfCoreMvvm.ViewModel"
         xmlns:dialogs="clr-namespace:WpfCoreMvvm.View.Dialogs"
+        xmlns:vm_dialogs="clr-namespace:WpfCoreMvvm.ViewModel.Dialogs"
         mc:Ignorable="d"
         Title="{Binding Title}" Height="450" Width="800">
     <Window.DataContext>
         <viewModel:MainViewModel/>
     </Window.DataContext>
     <Grid>
-        <view:MainView/>
+        <view:MainView>
+            <view:MainView.Style>
+                <Style TargetType="{x:Type view:MainView}">
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <BlurEffect Radius="3"/>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Source={x:Static vm_dialogs:BaseDialog.DialogsSource}, Path=Count, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Value="0">
+                            <Setter Property="Effect">
+                                <Setter.Value>
+                                    <BlurEffect Radius="0"/>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>                
+            </view:MainView.Style>
+        </view:MainView>
 
         <dialogs:DialogsView/>
     </Grid>
