--- a/WpfCoreMvvm/View/Dialogs/DialogMessage.xaml
+++ b/WpfCoreMvvm/View/Dialogs/DialogMessage.xaml
@@ -6,10 +6,71 @@
              xmlns:local="clr-namespace:WpfCoreMvvm.View.Dialogs"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel VerticalAlignment="Center"                
-                HorizontalAlignment="Center">
-        <Label Content="{Binding Parametrs.Header}"/>
-        <Button Content="Ok"
-                Command="{Binding OkCommand}"/>
-    </StackPanel>
+    <UserControl.Resources>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="MinWidth" Value="60"/>
+            <Setter Property="Height" Value="25"/>
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="Margin" Value="10 0 0 0"/>
+        </Style>
+    </UserControl.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.4*"/>
+            <ColumnDefinition Width="0.6*"/>
+            <ColumnDefinition Width="0.4*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="1"
+              Grid.ColumnSpan="3"
+              Background="BlueViolet">
+            
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition/>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                
+                <TextBlock Grid.Row="0"
+                           FontSize="16"
+                           Foreground="Wheat"
+                           VerticalAlignment="Center"
+                           Text="{Binding Parametrs.Header}"/>
+                <ScrollViewer Grid.Row="1"
+                              ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                              ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <TextBlock TextWrapping="Wrap"
+                               Foreground="White"
+                               Text="{Binding Parametrs.Message}"/>
+                </ScrollViewer>
+
+                <ItemsControl Grid.Row="2" ItemsSource="{Binding ButtonsSource}"
+                              HorizontalAlignment="Right">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Button Content="{Binding Name}"
+                                    Command="{Binding Command}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+
+
+            </Grid>
+        </Grid>
+    </Grid>
 </UserControl>
