--- a/WpfCoreMvvm/View/Dialogs/DialogsView.xaml
+++ b/WpfCoreMvvm/View/Dialogs/DialogsView.xaml
@@ -8,6 +8,20 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <Border Background="Black" Opacity="0.3">
+            <Border.Style>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="Visibility" Value="Visible"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Source={x:Static vm_dialogs:BaseDialog.DialogsSource}, Path=Count}" Value="0">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Border.Style>
+        </Border>
+        
+        
         <ItemsControl ItemsSource="{Binding Source={x:Static vm_dialogs:BaseDialog.DialogsSource}}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
