--- a/WpfCoreMvvm/App.xaml
+++ b/WpfCoreMvvm/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="View/Dialogs/DialogResources.xaml"/>
+                <ResourceDictionary Source="View/Notifications/NotificationResources.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
